--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TFTLNuxtAnimation",
-  "version": "1.0.0",
+  "name": "nuxt-boilerplate",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -15,12 +15,11 @@
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
-    "*.{css,vue}": "stylelint"
+    "*.{css,scss,vue}": "stylelint"
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "stylelint-scss": "^4.0.0"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -32,7 +31,9 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^6.0.0",
@@ -42,6 +43,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
+    "stylelint-scss": "^4.0.0",
     "vue-jest": "^3.0.4"
   }
 }
